k-simple-http/pounder.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pounder
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25% 
  template:
    metadata:
      labels:
        cdw.com/app: simple-http
        cdw.com/app.simple-http.role: pounder
      annotations:
        diamanti.com/endpoint0: '{"network":"default","perfTier":"low"}'
    spec:
      containers:
      - name: pounder
        image: staranto/simple-http-pounder:latest
        imagePullPolicy: Always
        command:
        - /tmp/pounder
        - http://counter:8181
        - yellow
        livenessProbe:
          httpGet:
            path: /live
            port: 8282
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
...
