k-simple-http/counter-nodeport.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: counter
spec:
  template:
    metadata:
      labels:
        mysidlabs.com/app: simple-http
        mysidlabs.com/app.simple-http.role: counter
    spec:
      containers:
      - name: counter
        image: staranto/simple-http-counter:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
          name: http
        volumeMounts:
        - name: vol-tz-config
          mountPath: /etc/localtime
        livenessProbe:
          httpGet:
            path: /live
            port: 8282
          initialDelaySeconds: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 8282
          initialDelaySeconds: 3
      volumes:
      - name: vol-tz-config
        hostPath:
          path: /usr/share/zoneinfo/America/New_York
      restartPolicy: Always
  replicas: 1
...
---
apiVersion: v1
kind: Service
metadata:
  name: counter
  labels:
    mysidlabs.com/app: simple-http
    mysidlabs.com/app.simple-http.role: counter-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 8181
    targetPort: 8181
  selector:
    mysidlabs.com/app.simple-http.role: counter
...
