k-simple-http/counter-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: counter-ingress
spec:
  rules:
    - host: "*.local"
      http:
        paths:
        - backend:
            serviceName: counter
            servicePort: 8181
